# FrugalBench

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  dataset.py  eval.sh  justfile  pyproject.toml  requirements.txt
.qwen/: PROJECT_SUMMARY.md  settings.json
data/: poc_dataset.csv
data/agentic/checksum/files/: data2.json  notes.md  readme.txt
data/agentic/decode/: cipher.sh
data/agentic/git_forensics/: setup.sh
data/agentic/hints/: hint1.txt
docs/superpowers/plans/: 2026-06-01-bug-fixes-infrastructure.md  2026-06-01-leaderboard-tooling.md  2026-06-01-sample-expansion.md  2026-06-01-scorer-upgrades.md  2026-06-02-post-review-fixes.md
docs/superpowers/reviews/: 2026-06-02-holistic-review.md
docs/superpowers/specs/: 2026-05-31-hrnss-mvp-design.md  2026-06-02-code-quality-improvements.md  2026-06-02-post-review-fixes.md
results/lm-studio_lfm2_5-1_2b-instruct-mlx/openai-api/default/: 2026-04-14T20-38-35_lm-studio-lfm2.5-1.2b-instruct-mlx_mxnTQgKQUuyXwbqhzs7NCG_eval-results.json  2026-04-14T20-38-37_lm-studio-lfm2.5-1.2b-instruct-mlx_JA9SxX2n3GuYrPLY4eKBQZ_eval-results.json  2026-04-14T20-38-39_lm-studio-lfm2.5-1.2b-instruct-mlx_dpVuwJKnTDWnGtTptQRUqN_eval-results.json
results/lm-studio_mock-model/openai-api/2a409d6b/: 2026-04-15T12-28-42_lm-studio-mock-model_EoX822Dwj2oz9mQs9z4Hy8_eval-results.json  2026-04-15T12-28-43_lm-studio-mock-model_k5j2dv9atyNFsVNQGt3yiP_eval-results.json  2026-04-15T12-28-46_lm-studio-mock-model_Cy7iq7G85ptR6myE6kzZtK_eval-results.json  2026-04-15T12-28-46_lm-studio-mock-model_DneehKJp28wtW2N6BMGTis_eval-results.json
results/lm-studio_mock-model/openai-api/default/: 2026-04-15T12-19-33_lm-studio-mock-model_9hz2Xfn3LLHQcSmFwJVytG_eval-results.json  2026-04-15T12-19-34_lm-studio-mock-model_7ZNtdWWGR6RDt93d7HPSph_eval-results.json  2026-04-15T12-19-37_lm-studio-mock-model_C97qxXdTrKXnqZVJqHcA3F_eval-results.json
sandbox/: __init__.py
sandbox/task10/: Dockerfile  compose.yaml
sandbox/task16/: Dockerfile  __init__.py  compose.yaml  init_db.py
sandbox/task2/: Dockerfile  compose.yaml
sandbox/task5/: Dockerfile  compose.yaml
scorers/: __init__.py  email_constraints.py  json_extraction.py  modern_nli.py  nli_faithfulness.py
scripts/: __init__.py  report.py  validate_samples.py
server/: __init__.py  main.py
server/static/: index.html  styles.css
tasks/: __init__.py  task10_code_debug.py  task11_logic_puzzle.py  task12_safety_refusal.py  task13_schema_extraction.py  task14_pii_redaction.py  task16_sql_execution.py  task1_extraction.py  task2_bash_sandbox.py  task3_email_reply.py  task4_summarization.py  task5_agentic.py  task6_hallucination.py  task7_routing.py  task8_rag_abstention.py  task9_tabular_math.py
tests/: conftest.py  test_dataset.py  test_full_tasks.py  test_justfile.py  test_leaderboard.py  test_scorers.py  test_server.py  test_solvers.py  test_task_interfaces.py  test_validate_samples.py
tests/support/: mock_lm_server.py
